Add André's email address

--- a/docs-gnome-asia-2014.tex
+++ b/docs-gnome-asia-2014.tex
@@ -256,7 +256,7 @@
   With special thanks to
   \begin{itemize}
   \item
-    Andr\'{e} \v{C}. Klapper, \texttt{} 
+    Andr\'{e} \v{C}. Klapper, \texttt{ak-47@gmx.net} 
   \item
     Sindhu S, \texttt{sindhus@gnome.org}
   \end{itemize}
